# nonebot-rs

./: Cargo.toml
nbrs_lua/src/: lib.rs
nbrs_matcher_r6s/src/: base.rs  lib.rs  plays.rs  pro.rs  set.rs  utils.rs
nbrs_no4/src/: clock.rs  main.rs
nonebot_rs/: Cargo.toml
nonebot_rs/src/: action.rs  api.rs  api_resp.rs  config.rs  cq_code.rs  error.rs  event.rs  lib.rs  logger.rs  message.rs  nb.rs  plugin.rs  utils.rs
nonebot_rs/src/bot/: _api.rs  mod.rs
nonebot_rs/src/builtin/: bot_status.rs  echo.rs  macros.rs  prematchers.rs  rcnb.rs
nonebot_rs/src/comms/: mod.rs  revs_ws.rs  utils.rs  ws.rs
nonebot_rs/src/matcher/: action.rs  api.rs  message_event_matcher.rs  mod.rs  notice_event_matcher.rs  prelude.rs  request_event_matcher.rs  rules.rs
nonebot_rs/src/matcher/matchers/: action.rs  mod.rs
nonebot_rs/src/scheduler/: mod.rs
nonebot_rs_macros/: Cargo.toml
nonebot_rs_macros/src/: bot_command.rs  event_arg.rs  lib.rs  utils.rs
tests/: Cargo.toml
tests/src/: lib.rs
