[package]
name = "nonebot_rs_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-error = { version = "1.0", default-features = false }
proc-macro2-diagnostics = "0.9"
regex = "1"
#nonebot_rs = {path = "../nonebot_rs"}
[lib]
proc-macro = true